--- a/Pipfile
+++ b/Pipfile
@@ -4,13 +4,29 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
-flask-sqlalchemy = "*"
-flask-wtf = "*"
-flask-security = "*"
-flask-swagger-ui = "*"
-mysqlclient = "*"
-flask-uploads = "*"
+babel = "==2.13.1"
+blinker = "==1.7.0"
+click = "==8.1.7"
+flask = "==3.0.0"
+flask-babelex = "==0.9.4"
+flask-login = "==0.6.3"
+flask-mail = "==0.9.1"
+flask-principal = "==0.4.0"
+flask-security = "==3.0.0"
+flask-sqlalchemy = "==3.1.1"
+flask-swagger-ui = "==4.11.1"
+flask-wtf = "==1.2.1"
+greenlet = "==3.0.1"
+itsdangerous = "==2.1.2"
+jinja2 = "==3.1.2"
+markupsafe = "==2.1.3"
+passlib = "==1.7.4"
+speaklater = "==1.3"
+sqlalchemy = "==2.0.23"
+typing-extensions = "==4.8.0"
+werkzeug = "==3.0.1"
+wtforms = "==3.1.1"
+cloudinary = "*"
 
 [dev-packages]
 
