--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 -i https://pypi.org/simple
 babel==2.13.1; python_version >= '3.7'
 blinker==1.7.0; python_version >= '3.8'
+certifi==2023.7.22; python_version >= '3.6'
 click==8.1.7; python_version >= '3.7'
+cloudinary==1.36.0
 flask==3.0.0; python_version >= '3.8'
 flask-babelex==0.9.4
 flask-login==0.6.3; python_version >= '3.7'
@@ -11,13 +13,15 @@ flask-security==3.0.0
 flask-sqlalchemy==3.1.1; python_version >= '3.8'
 flask-swagger-ui==4.11.1
 flask-wtf==1.2.1; python_version >= '3.8'
-greenlet==3.0.1; platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))
+greenlet==3.0.1; python_version >= '3.7'
 itsdangerous==2.1.2; python_version >= '3.7'
 jinja2==3.1.2; python_version >= '3.7'
 markupsafe==2.1.3; python_version >= '3.7'
 passlib==1.7.4
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 speaklater==1.3
 sqlalchemy==2.0.23; python_version >= '3.7'
 typing-extensions==4.8.0; python_version >= '3.8'
+urllib3==2.1.0; python_version >= '3.8'
 werkzeug==3.0.1; python_version >= '3.8'
 wtforms==3.1.1; python_version >= '3.8'
